# EmbRust

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs
.cargo/: config.toml
libraries/boards/: Cargo.toml
libraries/boards/src/: led.rs  lib.rs  serial.rs
libraries/boards/src/MatekF411/: mod.rs
libraries/boards/src/MatekH743/: memory_old.x  mod.rs
src/: FreeRTOSConfig.h  led.rs  main.rs  periph.rs  serial.rs  tasks.rs
