[package]
name = "freertos_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = {version = "0.7.3"}
freertos-rust = "0.1.2"
panic-halt = "0.2.0"
boards = {path = "libraries/boards"}
usb-device = "0.2.5"
usbd-serial = "0.1.0"
lazy_static = {version= "1.0", features=["spin_no_std"]}
spin = "0.5.2"

[features]
matekh743 = ["boards/matekh743"]
#matekf411 = ["boards/matekf411"]

[build-dependencies]
freertos-cargo-build = "*"

[[bin]]
name = "freertos_test"
test=false
bench=false
